updated script.js and background.js to update popup once job is added to db with job added text, then remove after 3 seconds.

--- a/extension/index.html
+++ b/extension/index.html
@@ -12,6 +12,7 @@
     <h2 id="companyName">Company Name</h2>
     <h2 id="jobTitle">Job Title</h2>
     <button id="addJobButton">Add job</button>
+    <p id="jobAdded" style="color: green; font-weight: bold;">Job Added!</p>
   </div>
   <script src="script.js"></script>
 </body>
